manifest/objects/ALTF__Account_Plan_Revenue_Target__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipLabel>Altify Account Plan Revenue Targets</relationshipLabel>
        <relationshipName>AM_Plan_Revenue_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__End_Date__c</fullName>
        <defaultValue>DATE(YEAR(Today()),12,31)</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Revenue_Target__c</fullName>
        <label>Revenue Target</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Altify Account Plan Revenue Target</label>
    <nameField>
        <label>AM Plan Revenue Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Plan Revenue Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>